file for web app

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="main">
         <h1>Онлайн магазин</h1>
-        <img src="https://www.flaticon.com/free-icons/buy">
+        <img src="media/buy.png" alt="Купить">
         <p>Lorem impsum dolor sit amet</p>
         <button id="buy">Купить</button>
     </div>
